ghc-6.2/hslibs/win32/Win32HDC_stub_ffi.h

extern void* prim_getCurrentBitmap(HDC arg1);
extern HBITMAP access_prim_getCurrentBitmap_res1(HsPtr);
extern int access_prim_getCurrentBitmap_gc_failed(HsPtr);
extern void* access_prim_getCurrentBitmap_gc_failstring(HsPtr);
extern void* prim_getCurrentBrush(HDC arg1);
extern HBRUSH access_prim_getCurrentBrush_res1(HsPtr);
extern int access_prim_getCurrentBrush_gc_failed(HsPtr);
extern void* access_prim_getCurrentBrush_gc_failstring(HsPtr);
extern void* prim_getCurrentFont(HDC arg1);
extern HFONT access_prim_getCurrentFont_res1(HsPtr);
extern int access_prim_getCurrentFont_gc_failed(HsPtr);
extern void* access_prim_getCurrentFont_gc_failstring(HsPtr);
extern void* prim_getCurrentPalette(HDC arg1);
extern HPALETTE access_prim_getCurrentPalette_res1(HsPtr);
extern int access_prim_getCurrentPalette_gc_failed(HsPtr);
extern void* access_prim_getCurrentPalette_gc_failstring(HsPtr);
extern void* prim_getCurrentPen(HDC arg1);
extern HPEN access_prim_getCurrentPen_res1(HsPtr);
extern int access_prim_getCurrentPen_gc_failed(HsPtr);
extern void* access_prim_getCurrentPen_gc_failstring(HsPtr);
extern void* prim_selectBitmap(HDC arg1,HBITMAP arg2);
extern HBITMAP access_prim_selectBitmap_res1(HsPtr);
extern int access_prim_selectBitmap_gc_failed(HsPtr);
extern void* access_prim_selectBitmap_gc_failstring(HsPtr);
extern void* prim_selectBrush(HDC arg1,HBRUSH arg2);
extern HBRUSH access_prim_selectBrush_res1(HsPtr);
extern int access_prim_selectBrush_gc_failed(HsPtr);
extern void* access_prim_selectBrush_gc_failstring(HsPtr);
extern void* prim_selectFont(HDC arg1,HFONT arg2);
extern HFONT access_prim_selectFont_res1(HsPtr);
extern int access_prim_selectFont_gc_failed(HsPtr);
extern void* access_prim_selectFont_gc_failstring(HsPtr);
extern void* prim_selectPen(HDC arg1,HPEN arg2);
extern HPEN access_prim_selectPen_res1(HsPtr);
extern int access_prim_selectPen_gc_failed(HsPtr);
extern void* access_prim_selectPen_gc_failstring(HsPtr);
extern void* prim_selectPalette(HDC arg1,HPALETTE arg2,int arg3);
extern HPALETTE access_prim_selectPalette_res1(HsPtr);
extern int access_prim_selectPalette_gc_failed(HsPtr);
extern void* access_prim_selectPalette_gc_failstring(HsPtr);
extern void* prim_selectRgn(HDC arg1,HRGN arg2);
extern WORD access_prim_selectRgn_res1(HsPtr);
extern int access_prim_selectRgn_gc_failed(HsPtr);
extern void* access_prim_selectRgn_gc_failstring(HsPtr);
extern void* prim_selectClipRgn(HDC arg1,HRGN arg2);
extern WORD access_prim_selectClipRgn_res1(HsPtr);
extern int access_prim_selectClipRgn_gc_failed(HsPtr);
extern void* access_prim_selectClipRgn_gc_failstring(HsPtr);