ghc-6.2/hslibs/win32/Win32HDC.hs


getCurrentBitmap :: HDC -> IO HBITMAP
getCurrentBitmap arg1 =
  prim_getCurrentBitmap arg1
  >>= \ gc_result ->
  access_prim_getCurrentBitmap_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getCurrentBitmap_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCurrentBitmap_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getCurrentBitmap" prim_getCurrentBitmap :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBitmap_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBitmap_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBitmap_gc_failstring :: Addr -> IO (Addr)
getCurrentBrush :: HDC -> IO HBRUSH
getCurrentBrush arg1 =
  prim_getCurrentBrush arg1
  >>= \ gc_result ->
  access_prim_getCurrentBrush_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getCurrentBrush_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCurrentBrush_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getCurrentBrush" prim_getCurrentBrush :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBrush_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBrush_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentBrush_gc_failstring :: Addr -> IO (Addr)
getCurrentFont :: HDC -> IO HFONT
getCurrentFont arg1 =
  prim_getCurrentFont arg1
  >>= \ gc_result ->
  access_prim_getCurrentFont_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getCurrentFont_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCurrentFont_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getCurrentFont" prim_getCurrentFont :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentFont_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentFont_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentFont_gc_failstring :: Addr -> IO (Addr)
getCurrentPalette :: HDC -> IO HPALETTE
getCurrentPalette arg1 =
  prim_getCurrentPalette arg1
  >>= \ gc_result ->
  access_prim_getCurrentPalette_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getCurrentPalette_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCurrentPalette_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getCurrentPalette" prim_getCurrentPalette :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPalette_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPalette_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPalette_gc_failstring :: Addr -> IO (Addr)
getCurrentPen :: HDC -> IO HPEN
getCurrentPen arg1 =
  prim_getCurrentPen arg1
  >>= \ gc_result ->
  access_prim_getCurrentPen_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getCurrentPen_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCurrentPen_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_getCurrentPen" prim_getCurrentPen :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPen_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPen_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_getCurrentPen_gc_failstring :: Addr -> IO (Addr)

selectBitmap :: HDC -> HBITMAP -> IO HBITMAP
selectBitmap arg1 arg2 =
  prim_selectBitmap arg1 arg2
  >>= \ gc_result ->
  access_prim_selectBitmap_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectBitmap_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectBitmap_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectBitmap" prim_selectBitmap :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBitmap_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBitmap_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBitmap_gc_failstring :: Addr -> IO (Addr)
selectBrush :: HDC -> HBRUSH -> IO HBRUSH
selectBrush arg1 arg2 =
  prim_selectBrush arg1 arg2
  >>= \ gc_result ->
  access_prim_selectBrush_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectBrush_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectBrush_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectBrush" prim_selectBrush :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBrush_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBrush_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectBrush_gc_failstring :: Addr -> IO (Addr)
selectFont :: HDC -> HFONT -> IO HFONT
selectFont arg1 arg2 =
  prim_selectFont arg1 arg2
  >>= \ gc_result ->
  access_prim_selectFont_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectFont_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectFont_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectFont" prim_selectFont :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectFont_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectFont_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectFont_gc_failstring :: Addr -> IO (Addr)
selectPen :: HDC -> HPEN -> IO HPEN
selectPen arg1 arg2 =
  prim_selectPen arg1 arg2
  >>= \ gc_result ->
  access_prim_selectPen_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectPen_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectPen_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectPen" prim_selectPen :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPen_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPen_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPen_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
--
----------------------------------------------------------------

selectPalette :: HDC -> HPALETTE -> Bool -> IO HPALETTE
selectPalette arg1 arg2 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_selectPalette arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_selectPalette_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectPalette_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectPalette_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectPalette" prim_selectPalette :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPalette_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPalette_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectPalette_gc_failstring :: Addr -> IO (Addr)

selectRgn :: HDC -> HRGN -> IO RegionType
selectRgn arg1 arg2 =
  withForeignPtr arg2 $ \ arg2 ->
  prim_selectRgn arg1 arg2
  >>= \ gc_result ->
  access_prim_selectRgn_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectRgn_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectRgn_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectRgn" prim_selectRgn :: Addr -> Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectRgn_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectRgn_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectRgn_gc_failstring :: Addr -> IO (Addr)

selectClipRgn :: HDC -> MbHRGN -> IO RegionType
selectClipRgn arg1 arg2 =
  (case arg2 of {
      Nothing -> (return (nullFinalHANDLE));
      (Just arg2) -> (return ((arg2)))
   }) >>= \ (arg2) ->
  withForeignPtr arg2 $ \ arg2 ->
  prim_selectClipRgn arg1 arg2
  >>= \ gc_result ->
  access_prim_selectClipRgn_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_selectClipRgn_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_selectClipRgn_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32HDC_stub_ffi.h prim_selectClipRgn" prim_selectClipRgn :: Addr -> Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipRgn_res1 :: Addr -> IO (Word16)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipRgn_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32HDC_stub_ffi.h" access_prim_selectClipRgn_gc_failstring :: Addr -> IO (Addr)
